fixes Become a host text header inconsistent spacing (added a margin-left 0px constraint for it not to be affected by other styling.)

--- a/frontend/web/src/styles/sass/pages/home/homePage.scss
+++ b/frontend/web/src/styles/sass/pages/home/homePage.scss
@@ -305,6 +305,10 @@ $secondary-color: var(--secondary-color);
             max-width: 350px;
             flex: 1;
 
+            .BH {
+                margin-left: 0px;
+            }
+
             h1 {
                 font-size: 1.75rem;
                 font-weight: bold;
